glyles/iupac/IUPACParser.py
# Generated from IUPAC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IUPACParser ( Parser ):

    grammarFileName = "IUPAC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'freeEnd'", "'redEnd'", "<INVALID>", 
                     "'C'", "'N'", "'O'", "'P'", "<INVALID>", "'Anhydro'", 
                     "'0d'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'@'", "','", "';'", "'--'", 
                     "'-'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'a'", 
                     "'ai'", "'c'", "'d'", "'e'", "'t'", "'='", "'i'", "'u'", 
                     "'/'", "'$'", "'#'", "' '", "'?'" ]

    symbolicNames = [ "<INVALID>", "FREEEND", "REDEND", "SAC", "CARBON", 
                      "NITROGEN", "OXYGEN", "PHOSPHOR", "FG", "ANHYDRO", 
                      "HEAD", "HEADD", "END", "COUNT", "TYPE", "RING", "NUM", 
                      "AT", "COMMA", "SEMICOLON", "DOUBLEDASH", "DASH", 
                      "LPAR", "RPAR", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "A", "AI", "C", "D", "E", "T", "EQ", "I", "U", "SLASH", 
                      "DOLLAR", "HASH", "SPACE", "QMARK" ]

    RULE_start = 0
    RULE_begin = 1
    RULE_branch = 2
    RULE_deriv = 3
    RULE_saci = 4
    RULE_con = 5
    RULE_add = 6
    RULE_fgi = 7
    RULE_carb = 8
    RULE_modi = 9
    RULE_qnum = 10
    RULE_typi = 11
    RULE_bridge = 12
    RULE_ct = 13

    ruleNames =  [ "start", "begin", "branch", "deriv", "saci", "con", "add", 
                   "fgi", "carb", "modi", "qnum", "typi", "bridge", "ct" ]

    EOF = Token.EOF
    FREEEND=1
    REDEND=2
    SAC=3
    CARBON=4
    NITROGEN=5
    OXYGEN=6
    PHOSPHOR=7
    FG=8
    ANHYDRO=9
    HEAD=10
    HEADD=11
    END=12
    COUNT=13
    TYPE=14
    RING=15
    NUM=16
    AT=17
    COMMA=18
    SEMICOLON=19
    DOUBLEDASH=20
    DASH=21
    LPAR=22
    RPAR=23
    LBRACE=24
    RBRACE=25
    LBRACK=26
    RBRACK=27
    A=28
    AI=29
    C=30
    D=31
    E=32
    T=33
    EQ=34
    I=35
    U=36
    SLASH=37
    DOLLAR=38
    HASH=39
    SPACE=40
    QMARK=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASH(self, i:int=None):
            if i is None:
                return self.getTokens(IUPACParser.HASH)
            else:
                return self.getToken(IUPACParser.HASH, i)

        def begin(self):
            return self.getTypedRuleContext(IUPACParser.BeginContext,0)


        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(IUPACParser.LBRACK)
            else:
                return self.getToken(IUPACParser.LBRACK, i)

        def branch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IUPACParser.BranchContext)
            else:
                return self.getTypedRuleContext(IUPACParser.BranchContext,i)


        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(IUPACParser.RBRACK)
            else:
                return self.getToken(IUPACParser.RBRACK, i)

        def getRuleIndex(self):
            return IUPACParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = IUPACParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(IUPACParser.HASH)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 29
                self.match(IUPACParser.LBRACK)
                self.state = 30
                self.branch()
                self.state = 31
                self.match(IUPACParser.RBRACK)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.begin()
            self.state = 39
            self.match(IUPACParser.HASH)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeginContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def branch(self):
            return self.getTypedRuleContext(IUPACParser.BranchContext,0)


        def deriv(self):
            return self.getTypedRuleContext(IUPACParser.DerivContext,0)


        def SPACE(self):
            return self.getToken(IUPACParser.SPACE, 0)

        def TYPE(self):
            return self.getToken(IUPACParser.TYPE, 0)

        def getRuleIndex(self):
            return IUPACParser.RULE_begin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBegin" ):
                listener.enterBegin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBegin" ):
                listener.exitBegin(self)




    def begin(self):

        localctx = IUPACParser.BeginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_begin)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.branch()
                self.state = 42
                self.deriv()
                self.state = 43
                self.match(IUPACParser.SPACE)
                self.state = 44
                self.match(IUPACParser.TYPE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.branch()
                self.state = 47
                self.deriv()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.deriv()
                self.state = 50
                self.match(IUPACParser.SPACE)
                self.state = 51
                self.match(IUPACParser.TYPE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.deriv()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BranchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deriv(self):
            return self.getTypedRuleContext(IUPACParser.DerivContext,0)


        def con(self):
            return self.getTypedRuleContext(IUPACParser.ConContext,0)


        def branch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IUPACParser.BranchContext)
            else:
                return self.getTypedRuleContext(IUPACParser.BranchContext,i)


        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(IUPACParser.LBRACE)
            else:
                return self.getToken(IUPACParser.LBRACE, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(IUPACParser.RBRACE)
            else:
                return self.getToken(IUPACParser.RBRACE, i)

        def getRuleIndex(self):
            return IUPACParser.RULE_branch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBranch" ):
                listener.enterBranch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBranch" ):
                listener.exitBranch(self)




    def branch(self):

        localctx = IUPACParser.BranchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_branch)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.deriv()
                self.state = 57
                self.con()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.deriv()
                self.state = 60
                self.con()
                self.state = 61
                self.branch()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.match(IUPACParser.LBRACE)
                self.state = 64
                self.branch()
                self.state = 65
                self.match(IUPACParser.RBRACE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.deriv()
                self.state = 68
                self.con()
                self.state = 69
                self.match(IUPACParser.LBRACE)
                self.state = 70
                self.branch()
                self.state = 71
                self.match(IUPACParser.RBRACE)
                self.state = 72
                self.branch()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.deriv()
                self.state = 75
                self.con()
                self.state = 76
                self.match(IUPACParser.LBRACE)
                self.state = 77
                self.branch()
                self.state = 78
                self.match(IUPACParser.RBRACE)
                self.state = 79
                self.match(IUPACParser.LBRACE)
                self.state = 80
                self.branch()
                self.state = 81
                self.match(IUPACParser.RBRACE)
                self.state = 82
                self.branch()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.deriv()
                self.state = 85
                self.con()
                self.state = 86
                self.match(IUPACParser.LBRACE)
                self.state = 87
                self.branch()
                self.state = 88
                self.match(IUPACParser.RBRACE)
                self.state = 89
                self.match(IUPACParser.LBRACE)
                self.state = 90
                self.branch()
                self.state = 91
                self.match(IUPACParser.RBRACE)
                self.state = 92
                self.match(IUPACParser.LBRACE)
                self.state = 93
                self.branch()
                self.state = 94
                self.match(IUPACParser.RBRACE)
                self.state = 95
                self.branch()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DerivContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modi(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IUPACParser.ModiContext)
            else:
                return self.getTypedRuleContext(IUPACParser.ModiContext,i)


        def saci(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IUPACParser.SaciContext)
            else:
                return self.getTypedRuleContext(IUPACParser.SaciContext,i)


        def RING(self):
            return self.getToken(IUPACParser.RING, 0)

        def TYPE(self):
            return self.getToken(IUPACParser.TYPE, 0)

        def getRuleIndex(self):
            return IUPACParser.RULE_deriv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeriv" ):
                listener.enterDeriv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeriv" ):
                listener.exitDeriv(self)




    def deriv(self):

        localctx = IUPACParser.DerivContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_deriv)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 99
                    self.modi() 
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 106 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 105
                    self.saci()

                else:
                    raise NoViableAltException(self)
                self.state = 108 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self.modi() 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 116
                self.match(IUPACParser.RING)


            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2174448) != 0):
                self.state = 119
                self.modi()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 125
                self.match(IUPACParser.TYPE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaciContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COUNT(self):
            return self.getToken(IUPACParser.COUNT, 0)

        def SAC(self):
            return self.getToken(IUPACParser.SAC, 0)

        def getRuleIndex(self):
            return IUPACParser.RULE_saci

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSaci" ):
                listener.enterSaci(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSaci" ):
                listener.exitSaci(self)




    def saci(self):

        localctx = IUPACParser.SaciContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_saci)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            _la = self._input.LA(1)
            if not(_la==3 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(IUPACParser.LPAR, 0)

        def typi(self):
            return self.getTypedRuleContext(IUPACParser.TypiContext,0)


        def NUM(self):
            return self.getToken(IUPACParser.NUM, 0)

        def DASH(self):
            return self.getToken(IUPACParser.DASH, 0)

        def qnum(self):
            return self.getTypedRuleContext(IUPACParser.QnumContext,0)


        def RPAR(self):
            return self.getToken(IUPACParser.RPAR, 0)

        def getRuleIndex(self):
            return IUPACParser.RULE_con

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCon" ):
                listener.enterCon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCon" ):
                listener.exitCon(self)




    def con(self):

        localctx = IUPACParser.ConContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_con)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(IUPACParser.LPAR)
                self.state = 131
                self.typi()
                self.state = 132
                self.match(IUPACParser.NUM)
                self.state = 133
                self.match(IUPACParser.DASH)
                self.state = 134
                self.qnum()
                self.state = 135
                self.match(IUPACParser.RPAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(IUPACParser.LPAR)
                self.state = 138
                self.match(IUPACParser.NUM)
                self.state = 139
                self.match(IUPACParser.DASH)
                self.state = 140
                self.qnum()
                self.state = 141
                self.match(IUPACParser.RPAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.typi()
                self.state = 144
                self.match(IUPACParser.NUM)
                self.state = 145
                self.match(IUPACParser.DASH)
                self.state = 146
                self.qnum()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self.typi()
                self.state = 149
                self.match(IUPACParser.NUM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(IUPACParser.EQ, 0)

        def LBRACK(self):
            return self.getToken(IUPACParser.LBRACK, 0)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(IUPACParser.NUM)
            else:
                return self.getToken(IUPACParser.NUM, i)

        def RBRACK(self):
            return self.getToken(IUPACParser.RBRACK, 0)

        def ct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IUPACParser.CtContext)
            else:
                return self.getTypedRuleContext(IUPACParser.CtContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(IUPACParser.COMMA)
            else:
                return self.getToken(IUPACParser.COMMA, i)

        def C(self):
            return self.getToken(IUPACParser.C, 0)

        def getRuleIndex(self):
            return IUPACParser.RULE_add

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)




    def add(self):

        localctx = IUPACParser.AddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_add)
        self._la = 0 # Token type
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(IUPACParser.EQ)
                self.state = 154
                self.match(IUPACParser.LBRACK)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==30 or _la==33:
                    self.state = 155
                    self.ct()


                self.state = 158
                self.match(IUPACParser.NUM)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==18:
                    self.state = 159
                    self.match(IUPACParser.COMMA)
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==30 or _la==33:
                        self.state = 160
                        self.ct()


                    self.state = 163
                    self.match(IUPACParser.NUM)
                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 169
                self.match(IUPACParser.RBRACK)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.match(IUPACParser.C)
                self.state = 171
                self.match(IUPACParser.LBRACK)
                self.state = 172
                self.match(IUPACParser.NUM)
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==18:
                    self.state = 173
                    self.match(IUPACParser.COMMA)
                    self.state = 174
                    self.match(IUPACParser.NUM)
                    self.state = 179
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 180
                self.match(IUPACParser.RBRACK)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FgiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COUNT(self):
            return self.getToken(IUPACParser.COUNT, 0)

        def bridge(self):
            return self.getTypedRuleContext(IUPACParser.BridgeContext,0)


        def FG(self):
            return self.getToken(IUPACParser.FG, 0)

        def getRuleIndex(self):
            return IUPACParser.RULE_fgi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFgi" ):
                listener.enterFgi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFgi" ):
                listener.exitFgi(self)




    def fgi(self):

        localctx = IUPACParser.FgiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fgi)
        try:
            self.state = 186
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.match(IUPACParser.COUNT)
                pass
            elif token in [4, 5, 6, 7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.bridge()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 185
                self.match(IUPACParser.FG)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CarbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CARBON(self):
            return self.getToken(IUPACParser.CARBON, 0)

        def NUM(self):
            return self.getToken(IUPACParser.NUM, 0)

        def add(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IUPACParser.AddContext)
            else:
                return self.getTypedRuleContext(IUPACParser.AddContext,i)


        def AI(self):
            return self.getToken(IUPACParser.AI, 0)

        def A(self):
            return self.getToken(IUPACParser.A, 0)

        def I(self):
            return self.getToken(IUPACParser.I, 0)

        def getRuleIndex(self):
            return IUPACParser.RULE_carb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCarb" ):
                listener.enterCarb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCarb" ):
                listener.exitCarb(self)




    def carb(self):

        localctx = IUPACParser.CarbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_carb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 35165044736) != 0):
                self.state = 188
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 35165044736) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 191
            self.match(IUPACParser.CARBON)
            self.state = 192
            self.match(IUPACParser.NUM)
            self.state = 196
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30 or _la==34:
                self.state = 193
                self.add()
                self.state = 198
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(IUPACParser.NUM)
            else:
                return self.getToken(IUPACParser.NUM, i)

        def DASH(self, i:int=None):
            if i is None:
                return self.getTokens(IUPACParser.DASH)
            else:
                return self.getToken(IUPACParser.DASH, i)

        def ANHYDRO(self):
            return self.getToken(IUPACParser.ANHYDRO, 0)

        def COMMA(self):
            return self.getToken(IUPACParser.COMMA, 0)

        def bridge(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IUPACParser.BridgeContext)
            else:
                return self.getTypedRuleContext(IUPACParser.BridgeContext,i)


        def fgi(self):
            return self.getTypedRuleContext(IUPACParser.FgiContext,0)


        def D(self):
            return self.getToken(IUPACParser.D, 0)

        def E(self):
            return self.getToken(IUPACParser.E, 0)

        def U(self):
            return self.getToken(IUPACParser.U, 0)

        def carb(self):
            return self.getTypedRuleContext(IUPACParser.CarbContext,0)


        def HEAD(self):
            return self.getToken(IUPACParser.HEAD, 0)

        def HEADD(self):
            return self.getToken(IUPACParser.HEADD, 0)

        def END(self):
            return self.getToken(IUPACParser.END, 0)

        def getRuleIndex(self):
            return IUPACParser.RULE_modi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModi" ):
                listener.enterModi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModi" ):
                listener.exitModi(self)




    def modi(self):
